--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,15 +32,18 @@ dependencies:
     sdk: flutter
   lottie: ^1.2.2
   confetti: ^0.6.0
+  flutter_svg: ^2.0.5
+
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-
+  flutter_launcher_icons : ^0.13.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -48,6 +51,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+flutter_launcher_icons: 
+  android: true
+  ios : true
+  image_path: "assets/icons/1024.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -56,6 +63,8 @@ dev_dependencies:
 flutter:
   assets:
     - assets/confetti.json
+    - assets/illustration/ordi.jpeg
+  
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
